  groups.  select() now uses this automatically.
* webhelpers.converters:
  - New helper transpose().
* webhelpers.media:
  - New module for muiltimedia helpers.  Initial functions determine the size
    of an image and choose a scaling factor.
* webhelpers.html.tags:
  - Options tuple contains Option objects for select/checkbox/radio groups.
    select() now uses this automatically.
  - field() provides a simple <div> based layout for a form widget with its
    label, required-ness, and optional hint and error message.
  - form_legend() returns a message about required fields.

0.6.1 (7/31/2008)
* Include a faster version of cgi.escape for use by the literal object.
* Fixed bug in SimplerXMLGenerator that the FeedGenerator uses, so that
  it doesn't use a {} arg.
* New helpers:
  - nl2br() and format_paragraphs() in webhelpers.html.converters.
  - ul() and ol() in webhelpers.html.tags.
  - series() in webhelpers.text.
* HTML.tag() is a synonym for make_tag(), both in webhelpers.html.builder.
* Change default form method to "post" (rather than "POST") to conform to XHTML.
* Add DeprecationWarning for webhelpers.rails package,
  webhelpers.rails.url_for(), and webhelpers.pagination.

0.6 (07/08/2008)
* Add webhelpers.html.builder to generate HTML tags with smart escaping,
  along with a literal type to mark preformatted strings.
* Deprecate webhelpers.rails, including its Javascript libraries (Prototype
  and Scriptaculous).  Wrap all rails helpers in a literal.
* Many new modules:
  constants - countries, states, and provinces.
  containers - high-level collections, including flash messages.
  date - date/time (rails replacement).
  html.converters - text-to-HTML (rails replacement).
  html.tags - HTML tags (rails replacement).
  html.tools - larger HTML chunks (rails replacement).
  mail - sending email.
  misc -  helpers that are neither text, numeric, container, nor date.
  number - numeric helpers and number formatters.